--- a/gb/23/12/31/n14147477.md
+++ b/gb/23/12/31/n14147477.md
@@ -32,17 +32,17 @@
 <p><strong>本文转载自明慧网文章：<ahref=http://greetings.big5.minghui.org/mh/articles/2023/12/30/469999.md#1 target=_blank>四川大法弟子恭祝师尊新年好(24条)</a></strong></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/13/n11518812.md#1">中秋月圆 逾40国法轮功学员问候李洪志师父</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/4/n12081685.md#1">56国海外法轮功学员恭祝李洪志师父华诞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/29/n12438239.md#1">中秋颂恩 墨尔本法轮功学员感恩李洪志大师</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">屏蔽露营 6人防风雨帐篷67%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
