--- a/gb/23/12/31/n14147478.md
+++ b/gb/23/12/31/n14147478.md
@@ -28,16 +28,17 @@
 <p><strong>本文转载自明慧网文章：<ahref=http://greetings.big5.minghui.org/mh/articles/2023/12/30/470003.md#1 target=_blank>安徽大法弟子恭祝师尊新年好(20条)</a></strong></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/13/n11518812.md#1">中秋月圆 逾40国法轮功学员问候李洪志师父</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/4/n12081685.md#1">56国海外法轮功学员恭祝李洪志师父华诞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/29/n12438239.md#1">中秋颂恩 墨尔本法轮功学员感恩李洪志大师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
