--- a/gb/23/12/31/n14147488.md
+++ b/gb/23/12/31/n14147488.md
@@ -36,7 +36,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">共产暴政录：宣导暴力杀戮的彭湃</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
