--- a/gb/23/12/31/n14147522.md
+++ b/gb/23/12/31/n14147522.md
@@ -28,17 +28,16 @@
 <p><strong>本文转载自明慧网文章：<ahref=http://greetings.big5.minghui.org/mh/articles/2023/12/30/470078.md#1 target=_blank>辽宁大法弟子恭祝师尊新年好(20条)</a></strong></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/1/1/n8654270.md#1">大法真相入人心　百姓恭祝李洪志大师新年快乐</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/13/n11518812.md#1">中秋月圆 逾40国法轮功学员问候李洪志师父</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/4/n12081685.md#1">56国海外法轮功学员恭祝李洪志师父华诞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/29/n12438239.md#1">中秋颂恩 墨尔本法轮功学员感恩李洪志大师</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
