--- a/gb/23/12/31/n14147709.md
+++ b/gb/23/12/31/n14147709.md
@@ -6,23 +6,21 @@
 <h6>2023年12月30日晚，研发经理Marco Longhin在佛罗伦萨五月音乐节剧场（Teatro del Maggio Musicale Fiorentino）观看了神韵环球艺术团的第四场演出。（施萍／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年12月31日讯】（大纪元记者施萍意大利佛罗伦萨报导）“我非常喜欢孙悟空这个角色”。佛罗伦萨医疗器械公司负责研发的经理Marco Longhin说，“既有趣、又漂亮，又具有互动性”。</p>
-<p>2023年12月30日，Marco Longhin在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%9B%E7%BD%97%E4%BC%A6%E8%90%A8%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">佛罗伦萨五月音乐节剧场</a>（Teatro del Maggio Musicale Fiorentino）观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团的第四场演出后表示，“这是一场必看的演出。”</p>
-<p>“这是我第一次看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>，真有意思”，Longhin说，“我很愉快”。</p>
-<p>Longhin表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的演出和观众的“互动感”很强烈，“非常有趣”，他喜欢所有的元素包括舞蹈、音乐以及色彩。</p>
+	<p>【大纪元2023年12月31日讯】（大纪元记者施萍意大利佛罗伦萨报导）“我非常喜欢孙悟空这个角色，既有趣、又漂亮，又具有互动性。”佛罗伦萨医疗器械公司负责研发的经理Marco Longhin观赏<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出后说，“这是一场必看的演出。”</p>
+<p>2023年12月30日晚，Marco Longhin在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%9B%E7%BD%97%E4%BC%A6%E8%90%A8%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">佛罗伦萨五月音乐节剧场</a>（Teatro del Maggio Musicale Fiorentino）观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团2024演季在当地的第四场演出后表示，“这是我第一次看<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%8F%A4%E5%85%B8%E8%88%9E.md#1">中国古典舞</a>，真有意思，我很愉快。”</p>
+<p>Longhin表示，神韵的演出和观众的“互动感”很强烈，“非常有趣”，他喜欢演出所有的元素包括舞蹈、音乐以及色彩。</p>
 <p>“我还喜欢他们的服装，所有的衣服都那么漂亮，我很喜欢。”他说。</p>
-<p>神韵将没有共产党的真正<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>搬上舞台，让Longhin看到了一个全新的中国。</p>
-<p>“我会推荐别人来看，因为我喜欢，所以也会推荐给别人”，他说，“我认为这是一种看待中国的不同方式，她可以扩展你的经验和知识”。</p>
+<p>神韵将没有共产党的真正<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>搬上舞台，让Longhin看到了一个全新的中国。“我会推荐别人来看，因为我喜欢，所以会推荐给别人。”他说，“我认为这（观赏神韵）是一种看待中国的不同方式，她可以扩展你的经验和知识。”</p>
 <p>Longhin最后表示，“这是一场必看的演出。”</p>
 <h2>神韵展现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a> 酒店老板：引人入胜</h2>
-<figure id="attachment_14147718" aria-describedby="caption-attachment-14147718" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14147718-31-20231230-8pm-Florence-Yixiao.jpg"><img class="size-medium wp-image-14147718" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147718-31-20231230-8pm-Florence-Yixiao-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14147718" class="wp-caption-text">2023年12月30日晚在意大利<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%9B%E7%BD%97%E4%BC%A6%E8%90%A8%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">佛罗伦萨五月音乐节剧场</a>（Teatro del Maggio Musicale Fiorentino），酒店老板Massimo Rossinelli与太太Chiti Patrizia观赏了美国神韵环球艺术团的演出。（Shawn Zheng／大纪元）</figcaption></figure>
-<p>“太美了，真的美妙非凡。”酒店老板Massimo Rossinelli观看神韵后表示。</p>
-<p>2023年12月30日晚在佛罗伦萨五月音乐节剧场（Teatro del Maggio Musicale Fiorentino），酒店老板Massimo Rossinelli跟太太一起观赏了美国神韵环球艺术团新演季在当地的第四场演出，两人都表示很喜欢。</p>
-<p>Rossinelli是瓦尔达诺一家酒店的老板，他表示，由于座位离舞台很近，所以细节看的特别清楚，“真的美妙非凡”，“还有那些服饰、编舞，真的很美”。</p>
-<p>神韵的舞蹈尤其给太太Chiti Patrizia留下了深刻的印象，“舞蹈演员都非常出色，跳得很棒，振奋人心。”</p>
-<p>Rossinelli表示赞同，而且赞叹女高音的独唱，“女高音水准超级高。”</p>
-<p>神韵也通过舞剧让人了解到在中国，对修炼人的迫害仍在发生。Rossinelli说，“印象最深刻的是展现那场发生在中国的迫害的节目。在2023年，竟然在某些国家无法上演这样的节目。”</p>
-<p>对于神韵艺术团所展现的传统中国文化，Rossinelli说，“很引人入胜，非常精彩”。谈到中国传统文化重视天人合一时，他表示赞同，“一定是，否则一切都毁了。”</p>
+<figure id="attachment_14147718" aria-describedby="caption-attachment-14147718" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14147718-31-20231230-8pm-Florence-Yixiao.jpg"><img class="size-medium wp-image-14147718" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147718-31-20231230-8pm-Florence-Yixiao-450x300.jpg" alt="" width="600" b="300" /></a><figcaption id="caption-attachment-14147718" class="wp-caption-text">2023年12月30日晚，在意大利<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%9B%E7%BD%97%E4%BC%A6%E8%90%A8%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">佛罗伦萨五月音乐节剧场</a>（Teatro del Maggio Musicale Fiorentino），酒店老板Massimo Rossinelli与太太Chiti Patrizia观赏了美国神韵环球艺术团的演出。（Shawn Zheng／大纪元）</figcaption></figure>
+<p>“太美了，真的美妙非凡。”酒店老板Massimo Rossinelli观赏神韵后表示。</p>
+<p>2023年12月30日晚，Rossinelli跟太太Chiti Patrizia一起来看神韵演出，两人都表示很喜欢。</p>
+<p>Rossinelli是瓦尔达诺一家酒店的老板，他表示，他们座位离舞台很近，所以细节看的特别清楚，“真的美妙非凡”，“还有那些服饰、编舞，真的很美”。</p>
+<p>神韵的舞蹈给太太Patrizia留下了深刻的印象，她说，“舞蹈演员都非常出色，跳得很棒，振奋人心。”Rossinelli表示赞同。</p>
+<p>Rossinelli也非常喜观女高音的独唱，他说，“女高音水准超级高。”</p>
+<p>神韵通过舞剧让人了解到，在中国，对修炼人的迫害仍在发生。Rossinelli说，“印象最深刻的是展现那场发生在中国的迫害的节目。在2023年，竟然在某些国家无法上演这样的节目。”</p>
+<p>对于神韵艺术团所展现的传统中国文化，Rossinelli说，“很引人入胜，非常精彩”。谈到中国传统文化重视天人合一时，他赞同地表示，“一定是，否则一切都毁了。”</p>
 <p>最后，他想对神韵艺术家说，“请继续下去！”</p>
 <p>责任编辑：王亦笑</p>
 	
@@ -35,7 +33,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147241.md#1">神韵发人深省 企业顾问感受到创世主的信息</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/26/n10172889.md#1" target="_blank">袁斌：中共抓壮丁连老弱小孩也不放过</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
